Fix scrollbars in Chromium

--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -999,7 +999,7 @@
       padding: 15px;
       flex-grow: 2;
       align-self: flex-end;
-      overflow: scroll;
+      overflow: auto;
 
       .account-role {
         vertical-align: top;
